--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
     <h2>A Simple Pyton Web App</h2>
     <p>Hello Word!!!!!!!, Our Web App is up and running</p>
+    <img src="images/GAD_Analysis_of_Experience_Dashboard.svg" alt="dashboard image" width="500" height="300">
 
     {% endblock %}
 
